# slm-rag-experimentation

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: apple_silicon_config.json
data/: README.md
docs/: API_LIMITS.md  APPLE_SILICON_TRAINING.md  CONFIGURATION.md  TRAINING_READY.md  UV_SETUP.md
models/checkpoints/: training_config.json
scripts/: README.md  collect_data.py  debug_stackexchange.py  generate_synthetic_qa.py  setup.sh  test_apple_silicon.py  test_config.py  test_trained_model.py  train_model.py
src/api/: README.md
src/data_collection/: README.md  config.py  models.py
src/data_collection/collectors/: arxiv.py  stackexchange.py
src/data_collection/formatters/: chatml.py
src/data_collection/generators/: README.md  synthetic_qa.py
src/data_collection/validators/: quality.py
src/graph/: README.md
src/knowledge/: README.md
src/llm/: README.md  claude_client.py  prompts.py
src/rag/: README.md
src/training/: README.md  __init__.py  config.py  dataset.py  trainer.py
src/utils/: README.md
tests/: README.md  conftest.py  test_example.py
