[project]
name = "slm-rag-experimentation"
version = "0.1.0"
description = "GraphRAG-powered Small Language Model for experimentation and statistical analysis Q&A"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Maksym Yadvinskyy", email = "maks@revent.studio"}
]
keywords = ["graphrag", "slm", "rag", "experimentation", "statistics", "nlp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Graph Database
    "surrealdb>=0.3.2",

    # Embeddings & ML
    "sentence-transformers>=3.2.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",

    # LLM Inference
    "httpx>=0.27.0",  # For Ollama API calls
    "openai>=1.54.0",  # Compatible client for various LLM APIs

    # Data Processing
    "numpy>=2.1.0",
    "pandas>=2.2.0",

    # Document Processing
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.1.0",
    "requests>=2.32.0",
    "aiohttp>=3.11.0",

    # Data Collection
    "arxiv>=2.1.0",  # ArXiv API
    "stackapi>=0.3.0",  # StackExchange API
    "anthropic>=0.39.0",  # Claude API for synthetic generation

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "rich>=13.9.0",  # Beautiful terminal output

    # Logging & Monitoring
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # For testing async HTTP

    # Code Quality
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "isort>=5.13.0",

    # Type Stubs
    "types-requests>=2.32.0",
    "types-pyyaml>=6.0.0",
    "pandas-stubs>=2.2.0",
]

all = [
    "slm-rag-experimentation[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["B018"]  # Useless expression (for test assertions)

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
